
Wed Dec 13 07:09:30 1995  Chris Provenzano (proven@mit.edu)

	* Makefile.in, keytab.c : Move db keytab routines here.

Wed Dec 13 03:51:53 1995  Chris Provenzano (proven@mit.edu)

        * kdb_xdr.c : Remove mkvno for krb5_db_entry

Tue Dec 12 01:20:02 1995  Chris Provenzano (proven@mit.edu)

	* kdb_dbm.c : Move the krb5_db_context to include/krb5/kdb_dbc.h.
	* kdb_dbm.c krb5_dbm_db_set_mkey(), krb5_dbm_db_get_mkey():
		Functions for associating a master key (krb5_encrypt_block *)
		to a krb5_db_context. Currently it associates it to the
		krb5_context and will be fixed once the krb5_db_context
		is better defined (Post 1.0).

Thu Nov 09 17:05:57 1995  Chris Provenzano (proven@mit.edu)

        * fetch_mkey.c, kdb_cpw.c, t_kdb.c : 
		Remove krb5_enctype from krb5_string_to_key() args.

Tue Nov  7 16:35:03 1995  Theodore Y. Ts'o  <tytso@dcl>

	* kdb_xdr.c (krb5_dbe_search_enctype): Make a more general version
		of kdb5_dbe_find_enctype() which allows you to search the
		keylist looking for multiple keys that fit your criteria.
		Eventually we should convert all programs to use
		kdb5_dbe_search_enctype() instead of kdb5_dbe_find_enctype().

Fri Nov 03 04:49:58 1995  Chris Provenzano (proven@mit.edu)

	* decrypt_key.c (krb5_dbekd_decrypt_key_data()) : If key salt length
		is 0 then set keysalt->data.data to NULL.
	* kdb_cpw.c (add_key_rnd(), add_key_pwd()) : When creating new keys 
		for a new kvno and there are multiple enctypes that use a 
		common keytype, then set the enctype in the key to the first
		specified enctype and skip all other enctypes that use 
		the same keytype. (This assumes the salt type is the same too.)
		This way when the kdc needs to get the server key it doesn't
		need to gues what enctypes the server supports.
	* kdb_xdr.c (krb5_dbe_find_enctype()): Match keys that use common
		keytypes but different enctypes. Eg. ENCTYPE_DES_CBC_MD5
		matches ENCTYPE_DES_CBC_CRC and vice versa.