@@ -1,3 +1,8 @@
+Wed Dec 13 09:28:33 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>
+
+	* keytab.c (krb5_ktkdb_resolve): Fix casting
+
+	* t_kdb.c (add_principal): Remove mkvno
 
 Wed Dec 13 07:09:30 1995  Chris Provenzano (proven@mit.edu)
 
